vcl/qt5/QtTransferable.cxx
@@ -339,6 +339,11 @@ QVariant QtMimeData::retrieveData(const QString& mimeType, QMetaType) const
             aByteArray = QByteArray(reinterpret_cast<const char*>(aLocaleString.getStr()),
                                     aLocaleString.getLength());
         }
+        else if (bWantUTF16)
+        {
+            aByteArray = QByteArray(reinterpret_cast<const char*>(aString.getStr()),
+                                    aString.getLength() * 2);
+        }
         else
             return QVariant(toQString(aString));
     }
